<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/content_layout_backg"
    android:orientation="vertical"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Date And Time"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/selectDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:backgroundTint="@color/color_1"
            android:gravity="center"
            android:text="SELECT"
            android:textColor="@color/color_white" />

    </LinearLayout>

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_backg"
        android:gravity="center"
        android:hint="Message"
        android:padding="10dp" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/color_1"
        android:text="Add"
        android:textColor="@color/color_white" />

</LinearLayout>