<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".fragments.RemindersFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefreshReminders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/remindersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/content_layout_backg"
            android:layout_marginEnd="10dp"
            android:scrollbars="vertical"
            tools:itemCount="2"
            tools:listitem="@layout/card_reminder">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddNewReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:backgroundTint="@color/color_1"
            android:tint="@color/color_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_float_plus_45"/>

    <TextView
        android:id="@+id/txtEmpty_reminders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="No reminders set yet. Create one so you don't forget! :)"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:textColor="@color/color_white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/swiperefreshReminders"
        app:layout_constraintEnd_toEndOf="@+id/swiperefreshReminders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/swiperefreshReminders" />

</androidx.constraintlayout.widget.ConstraintLayout>