<resources>
    <string name="app_name">TeamCom</string>

    <!--activity_login_reg-->
    <string name="btnLogin">Login With Email</string>
    <string name="btnRegister">Register With Email</string>
    <string name="btnReset">Reset Password</string>
    <string name="btnCheck">Check Authentication</string>
    <string name="btnShowReg">Create An Account</string>
    <string name="btnShowLogin">Login To Your Account</string>
    <string name="hintLgnEmail">Email</string>
...

    <string name="account">Done for today?</string>
    <string name="menu_logout">Logout</string>


    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--fragment_settings-->
    <string name="txtRoles">Roles</string>
    <string name="txtMembers">Members</string>
...
